# AutomatizatRefactor

./: .gitignore  __init__.py  main.py  pyproject.toml  readme.md  readme.md env descr  requirements.txt
evaluation/: evaluate_against_human.py
pipeline/: __init__.py  config.py  email_agent.py  file_parser.py  load_files.py  orchestrator.py  table_builder.py  text_extractor.py
pipeline/rag/: __init__.py  deep_rag_anylise.py  rag_classifier.py
storage/: rostender_links_unseen.txt
storage/company_context/: Тендеры.md  освещение.md  таблица.md
storage/reports/: tenders_summary_20260323_170447.html  tenders_summary_20260323_173704.html  tenders_summary_20260323_174322.html  tenders_summary_20260323_174750.html  tenders_summary_20260323_174929.html  tenders_summary_20260323_180857.html  tenders_summary_20260323_181434.html  tenders_summary_20260323_183420.html  tenders_summary_20260324_014902.html  tenders_summary_20260324_020210.html  tenders_summary_20260326_004152.html
storage/tenders/jsonl/: all_tenders_data_20260324_014702.jsonl  all_tenders_data_20260324_014902.jsonl  all_tenders_data_20260324_020210.jsonl  all_tenders_data_20260326_004152.jsonl
storage/train/: embbeddings_train.py
web_app/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  app.py  docker-compose.nginx.yml  docker-compose.yml  run.bat  Инструкция пользователя.docx
web_app/nginx/: nginx.conf
web_app/static/: app.jsx  index.html  style.css
